[front] fix horizontal overflow issues

--- a/front/src/carbure/assets/css/index.css
+++ b/front/src/carbure/assets/css/index.css
@@ -27,7 +27,8 @@ body {
   flex-direction: column;
   width: 100vw;
   height: 100vh;
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
   align-items: flex-start;
 }
 
@@ -35,7 +36,6 @@ body {
   display: flex;
   flex-direction: column;
   flex: 1;
-  min-width: 100%;
 }
 
 button,
